--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,28 +1,9 @@
-<!doctype html>
-<html lang=''>
 <head>
-   <meta charset='utf-8'>
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="styles.css">
-   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-   <script src="script.js"></script>
-   <title>CSS MenuMaker</title>
+   <div class="split-left">
+      <h2> No Account? Create One <%=link_to 'HERE!', '/signup' %></h2><br>
+   </div>
+
+   <div class="split-right">
+      <h2> Welcome Back! Login <%=link_to 'HERE!', '/login' %></h2><br>
+   </div>
 </head>
-<body>
-
-<div id='cssmenu'>
-<ul>
-   <li class='active'><a href='#'>Home</a></li>
-   <li><a href='#'>Cleints</a></li>
-   <li><a href='#'>Training Sessions</a></li>
-   <li><a href='#'>Account</a></li>
-</ul>
-</div>
-
-</body>
-
-<body>
-    <h2> Content </h2>
-</body>
-<html>
