--- a/app/views/trainers/new.html.erb
+++ b/app/views/trainers/new.html.erb
@@ -1,4 +1,4 @@
-<h1> Signup Page </h1>
+<h2> Sign Up Form </h2>
 
 <%= simple_form_for @trainer, :url => url_for(:action => 'create') do |f| %>
     <%= f.input :name %>
