--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,23 @@
 <body>
 
 <div id='cssmenu'>
-<ul>
-   <li class='active'><a href='#'>Home</a></li>
-   <li><a href='#'>Cleints</a></li>
-   <li><a href='#'>Training Sessions</a></li>
-   <li><a href='#'>Account</a></li>
-</ul>
+
+<% if !logged_in? %>
+   <ul>
+      <li class='active'><a href='/login'>Home</a></li>
+      <li><a href='/login'>Clients</a></li>
+      <li><a href='/login'>Training Sessions</a></li>
+      <li><a href='/login'>Account</a></li>
+   </ul>
+<% else %>
+   <ul>
+      <li class='active'><a href='/'>Home</a></li>
+      <li><a href='/clients'>Clients</a></li>
+      <li><a href='/trainers/<%=current_trainer.id%>/training_sessions'>Training Sessions</a></li>
+      <li><a href='/account'>Account</a></li>
+   </ul>
 </div>
+<% end %>
 
 </body>
 <%= yield %>
