--- a/app/views/trainers/account.html.erb
+++ b/app/views/trainers/account.html.erb
@@ -1,1 +1,17 @@
 <h2><%=@trainer.name%> Account Page </h2>
+
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+    <p>Delete Account (Can not be undone!) </p>
+    <%= button_to "Delete", @trainer, :method => :delete %>
+</footer>
