--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,16 +1,18 @@
+<%# Home Page %>
+
 <head>
    <% if !logged_in? %>
+      <div class="split-right">
+         <h2> Welcome Back! Login <%=link_to 'HERE!', '/login' %></h2><br>
+      </div>
+      
       <div class="split-left">
          <h2> No Account? Create One <%=link_to 'HERE!', '/signup' %></h2><br>
       </div>
 
-      <div class="split-right">
-         <h2> Welcome Back! Login <%=link_to 'HERE!', '/login' %></h2><br>
-      </div>
-
    <% else %>
       <div class="user-main-menu">
-         <h2> Welcome Back, <%=@trainer.name%>! </h2>
+         <h2> Welcome Back, <%=current_trainer.name%>! </h2>
 
          <h3> Today's Training Sessions: </h3>
             <% @training_sessions.each do |t| %>
