--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,1 +1,10 @@
 <h2> Client Edit Form </h2>
+
+<%= simple_form_for @client, :url => url_for(:action => 'update') do |f| %>
+    <%= f.input :name, input_html: {value: @client.name} %>
+    <%= f.input :email, input_html: {value: @client.email} %>   
+    <%= f.input :height, input_html: {value: @client.height} %>
+    <%= f.input :weight, input_html: {value: @client.weight} %>
+    <%= f.input_field :goals, input_html: {value: @client.goals} %>
+    <%= f.button :submit %>
+<% end %>
