fixed login bug and time set bug. flash alerts visible. testing basic functionality.

--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -3,7 +3,7 @@
 </head>
 
 <% @clients.each do |client| %>
-    <p><%= client.name%>, <%=client.email%>, <%=client.height%>, <%=client.weight%>, <%= lient.goals%></p>
+    <p><%= client.name%>, <%=client.email%>, <%=client.height%>, <%=client.weight%>, <%=client.goals%></p>
 <% end %>
 
 <footer>
