--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,5 +33,12 @@
 <% end %>
 
 </body>
-<%= yield %>
+
+<% flash.each do |type, msg| %>
+   <div>
+      <%= msg %>
+   </div>
+<% end %>
+
+   <%= yield %>
 <html>
