--- a/app/views/trainers/new.html.erb
+++ b/app/views/trainers/new.html.erb
@@ -1,5 +1,7 @@
 <h2> Sign Up Form </h2>
 
+<%# Need to add Omniauth (?) %>
+
 <%= simple_form_for @trainer, :url => url_for(:action => 'create') do |f| %>
     <%= f.input :name %>
     <%= f.input :email %>   
