--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="styles.css">
    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
    <script src="script.js"></script>
-   <title>CSS MenuMaker</title>
+   <title>Fit-Tracker</title>
 </head>
 <body>
 
@@ -20,14 +20,12 @@
       <li class='active'><a href='/login'>Home</a></li>
       <li><a href='/login'>Clients</a></li>
       <li><a href='/login'>Training Sessions</a></li>
-      <li><a href='/login'>Account</a></li>
    </ul>
 <% else %>
    <ul>
       <li class='active'><a href='/'>Home</a></li>
       <li><a href='/clients'>Clients</a></li>
       <li><a href='/trainers/<%=current_trainer.id%>/training_sessions'>Training Sessions</a></li>
-      <li><a href='/account'>Account</a></li>
    </ul>
 </div>
 <% end %>
